--- a/hydraulic-press/build.gradle
+++ b/hydraulic-press/build.gradle
@@ -1,6 +1,25 @@
 apply plugin: 'java'
 apply plugin: 'jacoco'
 
+// Checkstyle
+apply plugin: 'checkstyle'
+
+
+checkstyle {
+    toolVersion '7.6.1'
+    configFile file("${project.rootDir}/checkstyle/checkstyle.xml")
+    configProperties.checkstyleSuppressionsPath = file("${project.rootDir}/checkstyle/suppressions.xml").absolutePath
+}
+
+checkstyleMain {
+    source ='src/main/java'
+}
+
+checkstyleTest {
+    source ='src/test/java'
+}
+
+
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
@@ -29,6 +48,7 @@ dependencies {
     //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
+
 
 jacocoTestReport {
     reports {
